follow vue component file structure best practices

--- a/supergood_reads/templates/supergood_reads/views/review_list/_review_list_row.html
+++ b/supergood_reads/templates/supergood_reads/views/review_list/_review_list_row.html
@@ -51,7 +51,7 @@
 <!-- Text -->
 {% if review.text %}
     <tr
-        is="vue:review-row-text"
+        is="vue:review-list-row-text"
         text="{{ review.text }}"
     >
     </tr>
