--- a/supergood_reads/templates/supergood_reads/views/review_list/review_list.html
+++ b/supergood_reads/templates/supergood_reads/views/review_list/review_list.html
@@ -39,9 +39,9 @@
                         <tr>
                             <th scope="col" class="py-3.5 pr-3 text-left text-sm font-semibold text-gray-900">Title</th>
                             <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 lg:table-cell">Creator</th>
-                            <th scope="col" class="hidden px-3 py-3.5 text-right text-sm font-semibold text-gray-900 md:table-cell w-28">Completed</th>
-                            <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 sm:table-cell">Rating</th>
-                            <th scope="col" class="py-3.5 sm:pl-2 sm:pr-0 table-cell">
+                            <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 md:table-cell w-28">Completed</th>
+                            <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 sm:table-cell w-32">Rating</th>
+                            <th scope="col" class="py-3.5 sm:pl-2 sm:pr-0 table-cell w-8">
                                 <span class="sr-only">Edit</span>
                             </th>
                         </tr>
