--- a/supergood_reads/templates/supergood_reads/views/review_list/review_list.html
+++ b/supergood_reads/templates/supergood_reads/views/review_list/review_list.html
@@ -6,7 +6,7 @@
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between">
             <h1 class="text-3xl font-bold leading-tight tracking-tight text-gray-900">
-                My Reviews
+                Reviews
             </h1>
             <div class="flex-shrink-0">
                 <a href={% url 'create_review' %} class="relative inline-flex items-center gap-x-1.5 rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
