--- a/supergood_reads/templates/supergood_reads/views/home.html
+++ b/supergood_reads/templates/supergood_reads/views/home.html
@@ -18,54 +18,30 @@
             </div>
         </div>
         <div class="mt-12 space-y-12">
+            <h2 class="text-center mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Finally, one review site to rule them all.</h2>
             <div class="text-center text-md">
                 <home-fun-dropdown></home-fun-dropdown>
             </div>
-            <h2 class="text-center mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Finally, one review site to rule them all.</h2>
-            <p class="text-center text-lg leading-8 text-gray-600">
-                Use the rating systems from any of your second-favorite review sites to review any type of media.
-            </p>
             {% if not user.is_authenticated %}
-                <div class="text-center text-lg leading-8">
-                    <p class="max-w-lg mx-auto mb-6 text-gray-600">
-                        Most of the site is free to explore without signing in. But if you want to save your own reviews, you can create an account here:
-                    </p>
-                    <a href={% url 'login' %} class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Create an Account / Sign in</a>
+                <div class="flex gap-x-12 items-center">
+                    <div class="flex flex-col flex-1 text-center items-center space-y-6">
+                        <div>
+                            Sign up for a free account to save your own reviews!
+                        </div>
+                        <a href={% url 'login' %} class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+                            Create an Account / Sign in
+                        </a>
+                    </div>
+                    <div class="flex flex-col flex-1 text-center items-center space-y-6">
+                        <div>
+                            Or if you just want to play with the demo forms, you can do that too. Most of the site is free to explore without signing in.
+                        </div>
+                        <a href={% url 'create_review' %} class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+                            Try now!
+                        </a>
+                    </div>
                 </div>
             {% endif %}
-
-            <p class="mt-6 mx-auto text-lg leading-8 text-gray-600">
-                <span class="underline supergood-font text-gray-900">
-                    supergood<span class="inline-block align-middle">{% include "supergood_reads/components/svg/logo_book.html" %}</span>reads
-                </span>
-                lets you mix and match your favorite rating schemas to use with any type of media.
-            </p>
-            <p class="text-center mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">What is SupergoodReads?</p>
-            <div class="flex flex-col space-y-6">
-                <p>
-                    On the technical side, the purpose of this site is for me to experiment with some new ways of making Django applications.
-                    These are features that I haven't seen in too many other public projects, so I hope they're interesting/useful to you.
-                </p>
-
-                <p>
-                    One of my goals was to see how far I could enhance a <strong>Django templates</strong> before needing to swap out the frontend for
-                    a totally decoupled <strong>React/Vue.js</strong> app.
-                </p>
-
-                <p>
-                    What have been the results of my experiment? While I've discovered that it is technically possible to deeply integrate Vue.js with
-                    django templates, it's
-                </p>
-
-                Some of the features I've added so far are:
-                <ul class="max-w-lg mx-auto">
-                    <li>✅ <strong>Vue.js SFC (Single File Components)</strong> embedded within Django templates</li>
-                    <li>✅ <strong>Custom Django form field widgets</strong> made from <strong>Vue.js HeadlessUI Components</strong></li>
-                    <li>✅ <strong>Autocomplete</strong> Django form fields using Vue.js Components</li>
-                    <li>✅ <strong>The inevitable Datepicker</strong></li>
-                </ul>
-            </div>
-
         </div>
     </div>
 {% endblock content %}
