--- a/supergood_reads/templates/supergood_reads/views/home.html
+++ b/supergood_reads/templates/supergood_reads/views/home.html
@@ -9,7 +9,7 @@
         <div class="flex items-center flex-col justify-center">
             <div class="relative isolate overflow-hidden rounded-md">
                 <img
-                    src="{% static 'images/art_critic.jpg' %}"
+                    src="{% static 'supergood_reads/images/art_critic.jpg' %}"
                     alt="The Art Critic, a painting by John Henry Dolph (1886)"
                     class="sm:-mt-24 sm:-mb-32 rounded-md">
                 <h1 class="absolute top-4 left-4 text-white text-3xl font-bold sm:text-4xl supergood-font">
