--- a/supergood_reads/templates/supergood_reads/views/media_item_form/update_media_item.html
+++ b/supergood_reads/templates/supergood_reads/views/media_item_form/update_media_item.html
@@ -28,7 +28,7 @@
 {% block submit %}
     <div class="flex justify-start pt-5 pb-5 space-x-3">
         <div class="flex justify-start">
-            <input type="submit" class="cursor-pointer ml-3 inline-flex justify-center rounded-md bg-indigo-600 py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" value="Update Review"/>
+            <input type="submit" class="cursor-pointer ml-3 inline-flex justify-center rounded-md bg-indigo-600 py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" value="Update {{ object.media_type }}"/>
         </div>
         <div
             class="cursor-pointer inline-flex justify-center rounded-md bg-red-600 py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600"
