fix z-index bug on Autocomplete dropdown

--- a/supergood_reads/templates/supergood_reads/views/base/base.html
+++ b/supergood_reads/templates/supergood_reads/views/base/base.html
@@ -28,8 +28,8 @@
                         {% endblock content %}
                     </div>
                 </main>
-                <div/>
             </div>
-        </body>
+        </div>
+    </body>
 
-    </html>
+</html>
