--- a/supergood_reads/templates/supergood_reads/components/forms/layout/_field_wrapper.html
+++ b/supergood_reads/templates/supergood_reads/components/forms/layout/_field_wrapper.html
@@ -8,6 +8,6 @@
         {% endblock field %}
     </div>
     {% if field.help_text %}
-        <p class="mt-2 text-sm text-gray-500">{{ field.help_text|safe }}</p>
+        <div class="mt-2 text-sm text-gray-500">{{ field.help_text|safe }}</div>
     {% endif %}
 </div>
